# Discregrid

./: .gitignore  CITATION.cff  CMakeLists.txt  FindDiscregrid.cmake  LICENSE  README.md
.github/workflows/: build-linux.yml  build-windows.yml
cmake/Modules/: PatchOpenMPApple.cmake
cmd/: CMakeLists.txt  resource_path.hpp.in
cmd/discrete_field_to_bitmap/: CMakeLists.txt  bmp_file.cpp  bmp_file.hpp  main.cpp
cmd/discrete_field_to_bitmap_2d/: CMakeLists.txt  main.cpp
cmd/generate_density_map/: CMakeLists.txt  gauss_quadrature.cpp  gauss_quadrature.hpp  main.cpp  sph_kernel.hpp
cmd/generate_sdf/: CMakeLists.txt  main.cpp
cmd/generate_sdf/resources/: box.cdf
cmd/generate_sdf_2d/: CMakeLists.txt  main.cpp
discregrid/: CMakeLists.txt
discregrid/include/Discregrid/: All  cubic_lagrange_discrete_grid.hpp  cubic_lagrange_discrete_grid2D.hpp  discrete_grid.hpp  discrete_grid2D.hpp
discregrid/include/Discregrid/acceleration/: bounding_sphere.hpp  bounding_sphere_hierarchy.hpp  kd_tree.hpp  kd_tree.inl
discregrid/include/Discregrid/geometry/: PolygonDistance.hpp  TriangleMeshDistance.h  mesh_distance.hpp
discregrid/include/Discregrid/mesh/: entity_containers.hpp  entity_iterators.hpp  halfedge.hpp  triangle_mesh.hpp
discregrid/include/Discregrid/utility/: bmp_file.hpp  lru_cache.hpp  serialize.hpp
discregrid/src/: cubic_lagrange_discrete_grid.cpp  cubic_lagrange_discrete_grid2D.cpp  discrete_grid.cpp  discrete_grid2D.cpp
discregrid/src/acceleration/: bounding_sphere_hierarchy.cpp
discregrid/src/data/: z_sort_table.hpp
discregrid/src/geometry/: mesh_distance.cpp  point_triangle_distance.cpp  point_triangle_distance.hpp
discregrid/src/mesh/: entity_containers.cpp  entity_iterators.cpp  triangle_mesh.cpp
discregrid/src/utility/: bmp_file.cpp  spinlock.hpp  timing.cpp  timing.hpp
